# LEDAkem

./: .gitignore
Additional_Implementations/KEM/Benchmarking/: Makefile  bench_64_std.txt  callgrind.out.8403
Additional_Implementations/KEM/KAT_generation/: Makefile
Additional_Implementations/KEM/KAT_generation/testgen/: test_128SL_N02  test_128SL_N03  test_128SL_N04  test_192SL_N02  test_192SL_N03  test_192SL_N04  test_256SL_N02  test_256SL_N03  test_256SL_N04
Inverse_Testing/benchmark_splitting_point_inverse/: CMakeLists.txt  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  inverse_bench.c  inverse_bench_alt.c  inverse_bench_alt2.c  inverse_bench_alt3.c  rng.c  rng.h  timing_and_stats.h
Optimized implementations/High Compatibility/KEM/: Makefile
Optimized implementations/High Performance/KEM/: file
Optimized_implementations/Additional_Implementations/KEM/Benchmarking_HC/: 1  Makefile  bench_128_std.txt  log.txt
Optimized_implementations/Additional_Implementations/KEM/Benchmarking_HC/callgrind/: callgrind_1_10_18.5434
Optimized_implementations/Additional_Implementations/KEM/Benchmarking_HP/: Makefile  bench_256_std.txt
Optimized_implementations/High_Compatibility/KEM/: Makefile  inverse.c
Optimized_implementations/High_Compatibility/KEM/include/: gf2x_arith.h  gf2x_arith_mod_xPplusOne.h
Optimized_implementations/High_Performance/KEM/: Makefile
Optimized_implementations/High_Performance/KEM/include/: gf2x_arith.h  gf2x_arith_mod_xPplusOne.h
Reference_Implementation/KEM/: Makefile
(+22 files in other folders)
